@@ -408,6 +408,11 @@ MSW:
 - Fix Cygwin 1.7 build (David Gangola).
 - Allow using wxDC::DrawText() with multiline texts.
 
+All (GUI):
+
+- wxAUI: support auto-orientable toolbars (wsu).
+
+
 2.9.1:
 ------
 
